# logos-accounts-module

./: .gitignore  CMakeLists.txt  README.md  accounts_module.lidl  accounts_module_interface.h  accounts_module_plugin.cpp  accounts_module_plugin.h  fix_wallet_install_name.cmake  flake.nix  metadata.json
.github/workflows/: doctests.yml
doctests/: accounts-module-runtime.test.yaml  accounts-ui-app.test.yaml  run.sh
doctests/outputs/: accounts-module-runtime.md  accounts-ui-app.md
main/: index.html
main/macos-latest/: index.html
main/ubuntu-latest/: index.html
nix/: default.nix  include.nix  lib.nix
pr-14/: index.html
pr-14/macos-latest/: index.html
pr-14/ubuntu-latest/: index.html
pr-15/: index.html
pr-15/macos-latest/: index.html
pr-15/ubuntu-latest/: index.html
pr-16/: index.html
pr-16/macos-latest/: index.html
pr-16/ubuntu-latest/: index.html
pr-17/: index.html
pr-17/macos-latest/: index.html
pr-17/ubuntu-latest/: index.html
pr-18/: index.html
pr-18/macos-latest/: index.html
pr-18/ubuntu-latest/: index.html
src/: accounts_module_impl.cpp  accounts_module_impl.h  accounts_module_loader.h
tests/: CMakeLists.txt  test_accounts_integration.cpp  test_keystore.cpp
tests/mocks/: mock_gowalletsdk.cpp
tests/stubs/lib/: libgowalletsdk.h
